--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,39 @@
 .App {
   text-align: center;
+  position: relative;
+  min-height: 100vh;
+}
+body {
+  background-color: #98bad4;
+  color:#03224c
 }
 
 .firstColor {
-  background-color: #03224c;
+  background-color: #D4F2DB;
 }
 .secondColor {
-  background-color: #6b1c25;
+  color:#03224c; 
+}
+header {
+  height: 20vh;
+}
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+ul {
+  display: flex;
+  justify-content: space-evenly;
+}
+a[href^="mailto"] { 
+  color: #03224c; 
+  font-style: none;
+}
+.btn-outline {
+  border-color: #03224c;
+}
+.hover:hover {
+  background-color: #03224c;
+  color: #D4F2DB;
 }
