--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,6 @@ header {
   height: 20vh;
 }
 footer {
-  position: absolute;
   bottom: 0;
   width: 100%;
 }
@@ -36,4 +35,8 @@ a[href^="mailto"] {
 .hover:hover {
   background-color: #03224c;
   color: #D4F2DB;
+}
+.card {
+  width: 18rem;
+  margin: 2vh auto;
 }
