added photo for projects and done a bit of biography also added some animation

--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,13 @@ body {
 .secondColor {
   color:#03224c; 
 }
-
+/* utility classes fonts */
+.anton {
+  font-family: "Anton";
+}
+.oswald {
+  font-family: "Oswald";
+}
 /* Normal css */
 footer {
   bottom: 0;
@@ -54,11 +60,68 @@ a[href^="mailto"] {
 }
 .card {
   width: 100%;
-  margin: 2vh auto;
+  margin: 5vh auto;
   background-color: #D4F2DB;
 }
 .card a {
-  background-color: #98bad4;
+  background-color: #D4F2DB;
   color: #03224c;
   border-color: #03224c;
 }
+/* animation */
+
+.tracking-in-expand {
+	animation: tracking-in-expand 2s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+}
+.slide-in-right {
+	animation: slide-in-right 2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+.fade-in {
+	animation: fade-in 3s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+.text-focus-in {
+	animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+}
+
+/* animation keyframes with the help of animista */
+ @keyframes tracking-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes slide-in-right {
+  0% {
+    transform: translateX(1000px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes text-focus-in {
+  0% {
+    filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    filter: blur(0px);
+    opacity: 1;
+  }
+}
+
